InMemory Caching for Admin Statistics added

--- a/TwitterBackup.Web/Areas/Admin/Views/Statistics/Index.cshtml
+++ b/TwitterBackup.Web/Areas/Admin/Views/Statistics/Index.cshtml
@@ -59,7 +59,7 @@
 
 </ul>
 
-<h6 style="color: darkblue; font-style: italic">Last updated: @DateTime.Now</h6>
+<h6 style="color: darkblue; font-style: italic">Last updated: @ViewData["LastUpdated"]</h6>
 
 @if (Model != null)
 {
